WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224826
Static asserts in WasmAirIRGenerator.cpp and WasmB3IRGenerator.cpp trigger -Wnonnull warnings with GCC 11
https://bugs.webkit.org/show_bug.cgi?id=224826
Summary
Static asserts in WasmAirIRGenerator.cpp and WasmB3IRGenerator.cpp trigger -W...
Michael Catanzaro
Reported
2021-04-20 12:54:36 PDT
These asserts are understandably triggering -Wnonnull warnings: static_assert(sizeof(decltype(static_cast<Instance*>(nullptr)->cachedStackLimit())) == sizeof(uint64_t), ""); In
https://bugs.webkit.org/show_bug.cgi?id=224452#c26
, Jonathan Wakely has a tip to rewrite the assert: static_assert(sizeof(std::declval<Instance*>()->cachedStackLimit()) == sizeof(uint64_t), ""); It works.
Attachments
Patch
(3.70 KB, patch)
2021-04-20 13:02 PDT
,
Michael Catanzaro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2021-04-20 13:02:43 PDT
Created
attachment 426584
[details]
Patch
EWS
Comment 2
2021-04-20 19:38:22 PDT
Committed
r276343
(
236821@main
): <
https://commits.webkit.org/236821@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 426584
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-23 01:08:19 PDT
<
rdar://problem/77061153
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug