Static asserts in WasmAirIRGenerator.cpp and WasmB3IRGenerator.cpp trigger -Wnonnull warnings with GCC 11 https://bugs.webkit.org/show_bug.cgi?id=224826

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-04-20
Reviewed by Yusuke Suzuki.

Rewrite these static asserts to avoid warnings when built with GCC 11. Credit to Jonathan
Wakely for providing this mind-bending solution.

* wasm/WasmAirIRGenerator.cpp:
(JSC::Wasm::AirIRGenerator::restoreWebAssemblyGlobalState):
(JSC::Wasm::AirIRGenerator::addCurrentMemory):
* wasm/WasmB3IRGenerator.cpp:
(JSC::Wasm::B3IRGenerator::addCurrentMemory):

Canonical link: https://commits.webkit.org/236821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276343 268f45cc-cd09-0410-ab3c-d52691b4dbfc